--- a/sistema/views/home/mantenimiento/mantenimiento.html
+++ b/sistema/views/home/mantenimiento/mantenimiento.html
@@ -17,13 +17,13 @@
                 <div  class="mat-ripple mat-menu-ripple"></div>
             </a>
             <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.flota.semiremolque">
-                <div class="name">Ingresos operativos</div>
+                <div class="name">Caja</div>
                 <div  class="mat-ripple mat-menu-ripple"></div>
             </a>
-            <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.flota.semiremolque">
+            <!-- <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.flota.semiremolque">
                 <div class="name">Gastos Operativos</div>
                 <div  class="mat-ripple mat-menu-ripple"></div>
-            </a>
+            </a> -->
 
         </aside>
     
